test/compare/testdata/fixedbugs/issue330.script
// errorcheck

func F() {}

func F() {} // ERROR "F redeclared in this block"

var F = "hello" // ERROR "F redeclared in this block"

var G = 10 ; func G() {} // ERROR "G redeclared in this block"

